# aoc21

./: pyproject.toml
advent_of_code/: aoc_2021.ipynb
