[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["kesh-esure <keshav.patel@esure.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
pandas = "^1.3.5"
numpy = "^1.21.4"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
ipython = "^7.30.1"
ipykernel = "^6.6.0"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
